[gd_scene load_steps=3 format=2]

[ext_resource path="res://CollectableItems/SpawnItems.gd" type="Script" id=1]
[ext_resource path="res://CollectableItems/BoxItem.tscn" type="PackedScene" id=2]

[node name="Node" type="Node"]
script = ExtResource( 1 )
Box = ExtResource( 2 )

[node name="BoxSpawnPosition1" type="Position2D" parent="."]
position = Vector2( 640, 192 )

[node name="BoxSpawnPosition2" type="Position2D" parent="."]
position = Vector2( 287.621, 96 )

[node name="BoxSpawnPosition3" type="Position2D" parent="."]
position = Vector2( 984.441, 94.7401 )

[node name="BoxSpawnPosition4" type="Position2D" parent="."]
position = Vector2( 1074.19, 554.104 )

[node name="BoxSpawnPosition5" type="Position2D" parent="."]
position = Vector2( 241.329, 555.798 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
